--- a/src/app/yearslasting/page.css
+++ b/src/app/yearslasting/page.css
@@ -2,7 +2,7 @@
 
 .yearsLastingContainer {
   background-color: var(--palewhite);
-  padding: 2rem;
+  padding-top: 5rem;
   text-align: center;
 }
 
